@@ -23,6 +23,7 @@
 -【Fix】デザイン編集でタイミングにより二重に初期化してしまうことがある。
 -【Fix】月別記事リストのドロップボックス表示時のリンクが正しくない。（Ver3.20以降）
 -【Fix】記事一覧画面でログインしていない時もメニューへのリンクが出る。
+-【Fix】デフォルトブログでソーシャルアイコン等のリンクが正しくない（[https://adiary.adiary.jp/0410#c7:Thanks to やす]）
 -【Fix】【sumomoテーマ】幅480pxのタブレット等で必要な画像が表示されない。
 -【Fix】【sumomoテーマ】タブレット等で表示時に、Viewportの設定に失敗する。
 
